<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xw.gank.activity.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:background="@color/title_layout_color"
        android:elevation="@dimen/dp_4"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/sp_20" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/dp_120"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_account"
            style="@style/TextInputLayoutStyle"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/HintErrorAppearance"
            app:hintTextAppearance="@style/HintAppearance">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_username"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColorHint="@color/black"
                android:textSize="@dimen/sp_14" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayoutStyle"
            app:counterEnabled="false"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/HintErrorAppearance"
            app:hintTextAppearance="@style/HintAppearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/title_layout_color"
            app:passwordToggleTintMode="src_atop">

            <EditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/LoginLayoutStyle"
        android:layout_below="@+id/textInputLayout">
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@color/title_layout_color"
            android:textSize="@dimen/sp_16"

            />

        <Button
            android:layout_marginStart="@dimen/dp_20"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@color/title_layout_color"
            android:textSize="@dimen/sp_16"
            />
    </LinearLayout>

</RelativeLayout>
