<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xw.gank.activity.RegisterActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        app:navigationIcon="@mipmap/ic_arrow_back"
        android:background="@color/title_layout_color"
        android:elevation="@dimen/dp_4"
        app:title="@string/register"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_account"
            style="@style/TextInputLayoutStyle"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/HintErrorAppearance"
            app:hintTextAppearance="@style/HintAppearance">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_username"
                android:inputType="number"
                android:textColorHint="@color/black"
                android:maxLength="11"
                android:maxLines="1"
                android:textSize="@dimen/sp_14" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayoutStyle"
            app:counterEnabled="false"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="src_atop"
            app:passwordToggleTint="@color/title_layout_color"
            app:errorTextAppearance="@style/HintErrorAppearance"
            app:hintTextAppearance="@style/HintAppearance">

            <EditText
                android:id="@+id/tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/re_password"
            style="@style/TextInputLayoutStyle"
            app:counterEnabled="false"
            app:counterMaxLength="11"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="src_atop"
            app:passwordToggleTint="@color/title_layout_color"
            app:errorTextAppearance="@style/HintErrorAppearance"
            app:hintTextAppearance="@style/HintAppearance">

            <EditText
                android:id="@+id/repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        style="@style/TextInputLayoutStyle"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerInParent="true"
        android:onClick="register"
        android:text="@string/register"
        android:textColor="@color/white"
        android:background="@color/title_layout_color"
        android:textSize="@dimen/sp_16"

        />
</RelativeLayout>
